Multimodule project (#536)
* update docker-compose.yml and README.md

* split into submodules

* codeql on service submodule